fixup note edit button visibility

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -187,10 +187,6 @@ span.goodreads-stars a {
     color: #000;
 }
 
-.edit_list_control {
-    display: none;
-}
-
 .new_note_form {
     margin-top: 10px;
     display: none;
